--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">icoder</a>
+            <a class="navbar-brand" href="/icoderBootstrap/">icoder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -21,11 +21,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/icoderBootstrap/">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link active" href="/icoderBootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="">Post</a>
@@ -47,7 +47,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="/contact.html">Contact Us</a>
+                        <a class="nav-link active" href="/icoderBootstrap/contact.html">Contact Us</a>
                     </li>
 
                 </ul>
