--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,16 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/icoderBootstrap/">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">About</a>
+                        <a class="nav-link active" href="/icoderBootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Post</a>
+                        <a class="nav-link active" href="">Post</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -44,13 +44,6 @@
                             </li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/contact.html">Contact Us</a>
-                    </li>
-
-                </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
