--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="/icoderBootstrap/about.html">About</a>
+                        <a class="nav-link " href="/icoderBootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="">Post</a>
+                        <a class="nav-link" href="">Post</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="/icoderBootstrap/contact.html">Contact Us</a>
+                        <a class="nav-link" href="/icoderBootstrap/contact.html">Contact Us</a>
                     </li>
 
                 </ul>
